--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://euxhen.github.io/iChat",
+  "homepage": "http://euxhen.github.io/chat",
   "name": "client",
   "version": "0.1.0",
   "private": true,
